Added dependencies and github links to package config

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,11 @@ classifiers =
     Programming Language :: Python :: 3
     Topic :: Artistic Software
     Topic :: Utilities
-home_page = 
-download_url = 
+home_page = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator
+download_url = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator/releases
+dependencies = 
+    PySimpleGUI
+    playsound
 
 [options]
 package_dir=
