--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = bosanski_kalkulator
 version = 0.1.0
 author = ona li toki e jan Epiphany tawa mi
-description = 
+description = najbolji kalkulator
 long_description = file: README.md, CHANGELOG.md, LICENSE
 long_description_content_type = text/markdown
 keywords = Bosanski Kalkulator, calculator, kalkulator, bosnian, bosnia, bosna, bosanski
@@ -11,7 +11,6 @@ platforms = Windows, POSIX, MacOS
 classifiers =
     Intended Audience :: End Users/Desktop
     License :: OSI Approved :: MIT License
-    Natural Language :: Bosnian
     Operating System :: MacOS
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
@@ -28,6 +27,10 @@ dependencies =
 package_dir=
     =src
 packages=find:
+include_package_data = True
+
+[options.package_data]
+bosanski_kalkulator = images/*, audio/*
 
 [options.packages.find]
 where=src
