Fixed issue with dependent packages not being downloaded automatically

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,15 +19,15 @@ classifiers =
     Topic :: Utilities
 home_page = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator
 download_url = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator/releases
-dependencies = 
-    PySimpleGUI
-    playsound
 
 [options]
 package_dir=
     =src
 packages=find:
 include_package_data = True
+install_requires =
+    PySimpleGUI
+    playsound
 
 [options.package_data]
 bosanski_kalkulator = images/*, audio/*
